tdf#106701 tabOverMargin: only affect specified tabstops, not autotab

Change-Id: I15bf3a8555a152cab90380524b4a968f9f95fc37
Reviewed-on: https://gerrit.libreoffice.org/35924
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>